--- a/css/education.css
+++ b/css/education.css
@@ -5,31 +5,164 @@ SOME ELEMENTS FROM THEMES:
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
-    overflow-x: hidden;
-    font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+/* -------------------------body ze skillsów------------------------------------- */ 
+body{
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+overflow-x:hidden;
+font-size:20px;
+color:#404040;
+background-color:#fff;
+border-bottom:1px solid #dbdbdb;
 }
+
 .text-muted {
     color: #777;
 }
-
 .text-primary {
     color: #fed136;
 }
+p{
+line-height:1.75;
+font-size:14px;
+}
 
-p {
-    font-size: 14px;
-    line-height: 1.75;
+h1,h2,h3,h4,h5,h6{
+font-weight:800;
+font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+a{color:#404040
+}
+a:hover,a:focus{
+color:#0085a1}
+a img:hover,a img:focus{
+cursor:zoom-in}
+blockquote{
+color:gray;
+font-style:italic}
+hr.small{
+max-width:100px;
+margin:15px auto;
+border-width:4px;
+border-color:#fff}
+/* -------------------------koniec body ze skillsów------------------------------*/
+
+
+   
+
+/* ----------------------------góra--------------------------- */
+
+/*----------------------------navi----------------------------------*/
+
+
+.navbar-custom{
+position:absolute;
+top:0;
+left:0;
+left:0;
+width:100%;
+z-index:3;
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif}
+.navbar-custom .navbar-brand{
+font-weight:800}
+
+.navbar-custom .nav li a{
+text-transform:uppercase;
+font-size:12px;
+font-weight:800;
+letter-spacing:1px}@media only screen and (min-width:768px){
+
+.navbar-custom{
+background:0 0;
+border-bottom:1px solid transparent}
+
+.navbar-custom .navbar-brand{
+color:#fff;
+padding:20px}
+
+.navbar-custom .navbar-brand:hover,.navbar-custom .navbar-brand:focus{
+color:rgba(255,255,255,.8)}
+.navbar-custom .nav li a{
+color:#fff;
+padding:20px}
+.navbar-custom .nav li a:hover,.navbar-custom .nav li a:focus{
+color:rgba(255,255,255,.8)}}@media only screen and (min-width:1170px){
+
+.navbar-custom{-webkit-transition:background-color .3s;-moz-transition:background-color .3s;transition:background-color .3s;-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-backface-visibility:hidden;backface-visibility:hidden}
+
+.navbar-custom.is-fixed{
+position:fixed;
+top:-61px;
+background-color:rgba(255,255,255,.9);
+border-bottom:1px solid #f2f2f2;-webkit-transition:-webkit-transform .3s;-moz-transition:-moz-transform .3s;transition:transform .3s}
+
+.navbar-custom.is-fixed .navbar-brand{
+color:#404040}
+
+.navbar-custom.is-fixed .navbar-brand:hover,.navbar-custom.is-fixed .navbar-brand:focus{
+color:#0085a1}
+
+.navbar-custom.is-fixed .nav li a{
+color:#404040}
+.navbar-custom.is-fixed .nav li a:hover,.navbar-custom.is-fixed .nav li a:focus{
+color:#0085a1}
+
+.navbar-custom.is-visible{-webkit-transform:translate3d(0,100%,0);-moz-transform:translate3d(0,100%,0);-ms-transform:translate3d(0,100%,0);-o-transform:translate3d(0,100%,0);transform:translate3d(0,100%,0)}}
+
+/*NAPIS NA OBRAZKU*/
+
+.intro-header{
+background-color:gray;
+background:no-repeat center center;
+background-attachment:scroll;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;
+
+}
+
+.intro-header .site-heading,
+.intro-header .post-heading,
+.intro-header .page-heading{
+padding:100px 0 50px;
+color:#f7f7f7;
+
+}
+
+@media only screen and (min-width:768px){
+.intro-header .site-heading,
+.intro-header .post-heading,
+.intro-header .page-heading{
+padding:150px 0}
+}
+
+.intro-header .site-heading,
+.intro-header .page-heading{
+text-align:center
+}
+.intro-header .site-heading h1,
+.intro-header .page-heading h1{
+margin-top:0;
+font-size:40px;
+}
+@media only screen and (min-width:768px){
+.intro-header .site-heading h1,
+.intro-header .page-heading h1{
+font-size:60px;}
 }
 
 
-h1,h2,h3,h4,h5,h6 {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-}
 
-/* --------------------------nag³ówek i ca³oœæ sekcji---------------------------------- */
+.intro-header .site-heading .subheading,
+.intro-header .page-heading .subheading{
+color:black;
+font-size:24px;
+line-height:1.1;
+display:block;
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-weight:300;
+margin:10px 0 0}
+ 
+ 
+
+/* --------------------------nag³ówek i ca³oœæ sekcji z kó³kami---------------------------------- */
 
 section {
     padding: 100px 0;
@@ -44,7 +177,7 @@ section h2.section-heading {
 section h3.section-subheading {
     margin-bottom: 75px;
     text-transform: none;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
     font-weight: 400;
@@ -54,14 +187,14 @@ section h3.section-subheading {
     section {
         padding: 150px 0;
     }
-}
+} */
 
 /* ------------------------------------------------kó³eczka--------------------------------------- */
 
 .timeline {
     position: relative;
     padding: 0;
-    list-style: none;
+    list-style-type: none;
 }
 
 .timeline:before {
