--- a/css/education.css
+++ b/css/education.css
@@ -477,6 +477,22 @@ margin-top:10px;
 
 }
 
+/* ------------footer-------------- */
+
+
+.footer {background-color:#fff;;
+margin-bottom:50px;
+padding-bottom:30px;}
+
+.pager{margin:20px 0 0}
+.pager li>a,
+.pager li>span{font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;text-transform:uppercase;font-size:14px;font-weight:800;letter-spacing:1px;padding:15px 25px;background-color:#fff;border-radius:0}
+.pager li>a:hover,
+.pager li>a:focus{color:#fff;background-color:#0085a1;border:1px solid #0085a1}
+.pager .disabled>a,
+.pager .disabled>a:hover,
+.pager .disabled>a:focus,
+.pager .disabled>span{color:gray;background-color:#404040;cursor:not-allowed}
 
 /* 
 ::-moz-selection {
