--- a/css/newskills.css
+++ b/css/newskills.css
@@ -1,35 +1,4 @@
-/*!Copyright 2015 marlmarl
-SOME ELEMENTS FROM THEMES:
- * Clean Blog v1.0.0 (http://startbootstrap.com)
- * Copyright 2014 Start Bootstrap
- * Licensed under Apache 2.0 (https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE)
- */
 
-body{
-font-family:Lora,'Times New Roman',serif;
-font-size:20px;
-color:#404040}
-p{
-line-height:normal;}
-p a{
-text-decoration:underline}
-h1,h2,h3,h4,h5,h6{
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-font-weight:800}
-a{color:#404040
-}
-a:hover,a:focus{
-color:#0085a1}
-a img:hover,a img:focus{
-cursor:pointer;}
-blockquote{
-color:gray;
-font-style:italic}
-hr.small{
-max-width:100px;
-margin:15px auto;
-border-width:4px;
-border-color:#fff}
 
 /*MENU*/
 
@@ -100,7 +69,7 @@ background-attachment:scroll;-webkit-background-size:cover;-moz-background-size:
 .intro-header .post-heading,
 .intro-header .page-heading{
 padding:100px 0 50px;
-color:#f9f9f9}
+color:#f7f7f7}
 
 @media only screen and (min-width:768px){
 .intro-header .site-heading,
@@ -116,13 +85,15 @@ text-align:center
 .intro-header .site-heading h1,
 .intro-header .page-heading h1{
 margin-top:0;
-font-size:50px;}
-
+font-size:40px;
+}
 @media only screen and (min-width:768px){
 .intro-header .site-heading h1,
 .intro-header .page-heading h1{
 font-size:60px;}
 }
+
+
 
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading{
@@ -131,109 +102,36 @@ font-size:24px;
 line-height:1.1;
 display:block;
 font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-font-weight:200;
+font-weight:300;
 margin:10px 0 0}
 
+/* -------------------------------------tu bêdzie siê dzia³o----------------------------------- */
 
 
-.thumbnail {
-border:initial;
-background-color:#efefef;}
 
-.thumbnail:hover {
-    opacity: .7;
-	/* filter: blur(2px); */
-	
+
+
+
+
+
+
+
+/* -------------------------------tu skoñczy siê dziaæ :)------------------------------------- */
+.footer {
+background-color:#fff;
+margin-bottom:50px;
+padding-bottom:30px;
 }
 
-
-
-
-
-
-
-/*WSTEPNIAK*/
-
-.skills {
-    background-color:#efefef;
-    border-bottom:1px solid #dbdbdb;
-}
-
-.skills h2 {
-    color:#393c3d;
-    font-size:32px;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-	text-align:center;
-	font-weight:600;
-	margin-bottom:30px;}
-
-
-.skills p {
-	color: #444;
-	text-align:center;
-	font-weight: 100;
-	line-height: normal;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	font-size: 24px;
-	border: medium none;
-}
-	
-
-.skills.quote {
-  padding-bottom: 80px;
-  background-color:black;}
-  
-  
-  
-  .tellmemore {
-  background-color: #f9f9f9;
-}
-
-.tellmemore h3 {
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-  font-size: 32px;
-  font-weight:400;
-  margin-left:20px;
-  margin-top:70px;
-  margin-bottom:40px;
-  
-}
-
-.tellmemore p {
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-color: #444;
-font-weight: 300;
-line-height: normal;
-font-size: 18px;
-margin-left:20px;
-margin-bottom:20px;
-
-}
-
-.tellmemore a {
-  color: #00b0ff;
-  font-weight:500;
-  margin-left:5px;
-  
-}
-
-.tellmemore a:hover {
-color:black;
-
-}
-
-
-/*PEJ¯EREK*/
 
 .pager{margin:20px 0 0}
 .pager li>a,
 .pager li>span{font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;text-transform:uppercase;font-size:14px;font-weight:800;letter-spacing:1px;padding:15px 25px;background-color:#fff;border-radius:0}
-.pager li>a:hover,.pager li>a:focus{color:#fff;background-color:#0085a1;border:1px solid #0085a1}
-.pager .disabled>a,.pager .disabled>a:hover,.pager .disabled>a:focus,.pager .disabled>span{
-color:gray;
-background-color:#404040;
-cursor:not-allowed}
+.pager li>a:hover,
+.pager li>a:focus{color:#fff;background-color:#0085a1;border:1px solid #0085a1}
+.pager .disabled>a,
+.pager .disabled>a:hover,
+.pager .disabled>a:focus,
+.pager .disabled>span{color:gray;background-color:#404040;cursor:not-allowed}
 
 ::-moz-selection{color:#fff;text-shadow:none;background:#0085a1}::selection{color:#fff;text-shadow:none;background:#0085a1}img::selection{color:#fff;background:0 0}img::-moz-selection{color:#fff;background:0 0}body{webkit-tap-highlight-color:#0085a1}
