projekt kółeczkowy yay

--- a/css/kopia.css
+++ b/css/kopia.css
@@ -6,104 +6,6 @@ some code elements inspired by Start Bootstrap themes:
  http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
-
-background-image:url("../img/kubekbw.jpg");
-background-position: center;
-background-attachment: fixed;
-background-repeat: no-repeat;
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-
-
-}
-h1,h2,h3,h4,h5,h6{
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-text-align:center;
-
-}
-
-ul {
-list-style-type: none;
-
-}
-
-.navbar-default .navbar-nav > li > a  {
-color:#739cb2;
-}
-a:hover,a:focus{
-color:grey}
-
-/* a,
-a:hover,
-a:focus,
-a:active,
-a.active {
-    outline: 0;
-} */
-
-hr.small{
-max-width:100px;
-margin:15px auto;
-border-width:4px;
-border-color:#cddf11;}
-
-
-/* -------------------buttons---------------------- */
-.btn-xl {
-	height:120px;
-	width:120px;
-    border-radius: 50%;
-    padding: 45px 27px;
-    border-color: #cddf11;
-	text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #cddf11;
-}
-
-.btn-xl:hover,
-.btn-xl:focus,
-.btn-xl:active,
-.btn-xl.active,
-.open .dropdown-toggle.btn-xl {
-    border-color: #2D8A15;
-    color: black;
-    background-color: #2D8A15;
-}
-
-.btn-xl:active,
-.btn-xl.active,
-.open .dropdown-toggle.btn-xl {
-    background-image: none;
-}
-
-.btn-xl.disabled,
-.btn-xl[disabled],
-fieldset[disabled] .btn-xl,
-.btn-xl.disabled:hover,
-.btn-xl[disabled]:hover,
-fieldset[disabled] .btn-xl:hover,
-.btn-xl.disabled:focus,
-.btn-xl[disabled]:focus,
-fieldset[disabled] .btn-xl:focus,
-.btn-xl.disabled:active,
-.btn-xl[disabled]:active,
-fieldset[disabled] .btn-xl:active,
-.btn-xl.disabled.active,
-.btn-xl[disabled].active,
-fieldset[disabled] .btn-xl.active {
-    border-color: #fed136;
-    background-color: #fed136;
-}
-
-.btn-xl .badge {
-    color: #fed136;
-    background-color: #fff;
-}
-
-
 
 
 
@@ -111,16 +13,10 @@ fieldset[disabled] .btn-xl.active {
 /* -------------------------------header----------------------- */
 /* i NAPIS NA OBRAZKU*/
 
-#canvasBubbles {
-height:700px;
-width:100%;
-position:absolute;
-}
 
 .intro-header{
 background-color:rgba(0,0,0,0.6);
-
-height: 700px;
+height: 500px;
 background-repeat: no-repeat;
 background-size: cover;
 background-attachment:scroll;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;
@@ -128,13 +24,12 @@ background-attachment:scroll;-webkit-background-size:cover;-moz-background-size:
 }
 
 .intro-header .site-heading{
-padding:150px 0 50px;
+padding:100px 0 50px;
 color:#f7f7f7}
 
 @media only screen and (min-width:768px){
-
 .intro-header .site-heading{
-padding:200px 0}
+padding:150px 0}
 }
 
 .intro-header .site-heading {
@@ -145,7 +40,6 @@ margin-top:0;
 font-weight:800;
 font-size:40px;
 color#f7f7f7;
-
 
 }
 
@@ -163,8 +57,9 @@ font-size:40px;
 display:block;
 font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 font-weight:500;
-padding-bottom:70px;
 margin:10px 0 0}
+
+
 
 
 
@@ -237,7 +132,7 @@ color:#0085a1}
 	color: rgba(0,0,0,0);
 }
 
-/* img.desaturate { -webkit-filter: grayscale(100%); filter: grayscale(100%); } */
+img.desaturate { -webkit-filter: grayscale(100%); filter: grayscale(100%); }
 
 .segment {
     overflow: hidden;
@@ -246,14 +141,20 @@ color:#0085a1}
 	padding-left: 20px;
 	padding-right:20px;
 	margin-bottom:70px;
-    margin-top:100px;
 	}
 	
+	
 
-.segment-image {
-border: 15px solid rgba(204, 222, 33, 0.7);
-margin: 50px 0;
+.segment h3,
+.segment p,
+.segment ul{
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+
+
 }
+
+
+
 
 .segment-image.pull-left {
     margin-right: 40px;
@@ -269,8 +170,15 @@ margin: 50px 0;
 	text-transform:lowercase;
 	text-align:center;
 	margin-bottom:70px;
-	
 }
+.thumb
+{background-color: rgba(0,0,0,0.7);
+ }
+ 
+ .contact {
+ padding:30px;
+ 
+ }
 
 
 @media(max-width:1200px) {
@@ -300,7 +208,6 @@ margin: 50px 0;
 
     .segment-image {
         max-width: 50%;
-
     }
 
     .segment-image.pull-left {
@@ -370,9 +277,9 @@ margin: 50px 0;
 
 .wstep-content {
 text-align:center;
-color:white;
+color:#999;
 font-size:20px;
-font-weight:200;
+font-weight:300;
 margin-bottom:30px;
 }
 
@@ -383,29 +290,24 @@ margin-bottom:70px;
 }
 }
 
- /* ----------------ko³ka--------------- */
+ /* ----------------thumbnailsy--------------- */
+ 
 
- .kolka
-{background-color: rgba(0,0,0,0.7);
-background-position: center;
-padding:0;px
-margin:0;
-color:#d2d2d2;
- }
-
-.img-center {
-    margin: 10px auto;
-	opacity: 0.8;
-	filter: alpha(opacity=80); /* For IE8 and earlier */
+ .thumbnail {
+ border-style:none;
+ background-color:transparent;}
+ 
+ .thumb {
+ padding-bottom:40px;}
+ 
+ .thumbnail:hover {
+    opacity: .6;
+	/* filter: blur(2px); */
+	
 }
  
+ 
 /*  ----------kontakt--------- */
-
- 
- .contact {
- padding:30px;
- 
- }
 
 .contact h3,
 .contact h2{
@@ -413,7 +315,6 @@ text-align:right;
 margin-top:0;
 font-weight:400;
 }
-
 
  
  
