--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,7 @@ position:absolute;
 }
 
 .intro-header{
+
 background-color:rgba(0,0,0,0.6);
 
 height: 700px;
@@ -128,6 +129,7 @@ background-attachment:scroll;-webkit-background-size:cover;-moz-background-size:
 }
 
 .intro-header .site-heading{
+
 padding:150px 0 50px;
 color:#f7f7f7}
 
@@ -141,6 +143,7 @@ padding:200px 0}
 text-align:center
 }
 .intro-header .site-heading h1{
+font-family: 'Raleway', sans-serif;
 margin-top:0;
 font-weight:800;
 font-size:40px;
@@ -157,11 +160,12 @@ font-size:80px;}
 
 
 .intro-header .site-heading .subheading {
+
 color:#777;
 line-height: 1.1;
 font-size:40px;
 display:block;
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-family: 'Raleway', sans-serif;
 font-weight:500;
 padding-bottom:70px;
 margin:10px 0 0}
