--- a/css/index.css
+++ b/css/index.css
@@ -17,9 +17,14 @@ font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 
 }
 h1,h2,h3,h4,h5,h6{
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 text-align:center;
 
+}
+
+p {
+font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-weight:100;
 }
 
 ul {
@@ -56,7 +61,7 @@ border-color:#cddf11;}
     padding: 45px 27px;
     border-color: #cddf11;
 	text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 20px;
     font-weight: 700;
     color: #fff;
@@ -189,7 +194,7 @@ font-weight:800}
 
 .navbar-custom .nav li a{
 text-transform:uppercase;
-font-size:12px;
+font-size:14px;
 font-weight:800;
 letter-spacing:1px}@media only screen and (min-width:768px){
 
@@ -246,7 +251,6 @@ color:#0085a1}
 .segment {
     overflow: hidden;
 	color:#999;
-	font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 	padding-left: 20px;
 	padding-right:20px;
 	margin-bottom:70px;
@@ -255,7 +259,7 @@ color:#0085a1}
 	
 
 .segment-image {
-border: 15px solid rgba(204, 222, 33, 0.7);
+border: 15px solid rgba(204, 222, 33, 1);
 margin: 50px 0;
 }
 
@@ -273,6 +277,7 @@ margin: 50px 0;
 	text-transform:lowercase;
 	text-align:center;
 	margin-bottom:70px;
+	color:#777777;
 	
 }
 
@@ -373,11 +378,12 @@ margin: 50px 0;
 /*  ---------------wstep------------------ */
 
 .wstep-content {
-text-align:center;
+text-align:left;
 color:white;
 font-size:20px;
 font-weight:200;
 margin-bottom:30px;
+margin-left:30px;
 }
 
 @media only screen and (min-width:768px){
@@ -387,6 +393,17 @@ margin-bottom:70px;
 }
 }
 
+.niebieski{
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-weight:800;
+color:#1FA4C6;
+}
+
+.czerwony{
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-weight:800;
+color:#DE2020;
+}
  /* ----------------ko³ka--------------- */
 
  .kolka
@@ -399,8 +416,15 @@ color:#d2d2d2;
 
 .img-center {
     margin: 10px auto;
-	opacity: 0.8;
+	opacity: 0.7;
 	filter: alpha(opacity=80); /* For IE8 and earlier */
+	
+}
+
+ .kolko:hover {
+    opacity: 1;
+	/* filter: blur(2px); */
+	
 }
  
 /*  ----------kontakt--------- */
@@ -410,14 +434,18 @@ color:#d2d2d2;
  padding:30px;
  
  }
+ 
+ .contact p {
+ font-size:26px;
+ text-align:center;}
 
-.contact h3,
+/* .contact h3,
 .contact h2{
 text-align:right;
 margin-top:0;
 font-weight:400;
 }
-
+ */
 
  
  
