--- a/css/skills.css
+++ b/css/skills.css
@@ -16,8 +16,8 @@ font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 
 
 }
-h1,h2,h3,h4,h5,h6{
-font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+p,h1,h2,h3,h4,h5,h6{
+font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 ul {
@@ -30,6 +30,7 @@ color:#739cb2;
 }
 a:hover,a:focus{
 color:grey}
+
 
 
 .skilltheme li { 
@@ -48,6 +49,13 @@ margin:15px auto;
 border-width:4px;
 border-color:#cddf11;}
 
+
+/* #canvasBubbles {
+height:100%;
+width:100%;
+position:absolute;
+}
+ */
 /* -------------------------------header----------------------- */
 /* i NAPIS NA OBRAZKU*/
 
