--- a/css/index.css
+++ b/css/index.css
@@ -17,13 +17,13 @@ font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 
 }
 h1,h2,h3,h4,h5,h6{
-font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 text-align:center;
 
 }
 
 p {
-font-family: 'Raleway','Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
 font-weight:100;
 }
 
