--- a/css/mycss.css
+++ b/css/mycss.css
@@ -283,9 +283,8 @@ nav .flex-container {
 }
 
 .logo a {
-    font-family: 'Montseratt', sans-serif;
-    font-size:2vw;
-    font-weight: 800;
+    font-family: 'Fascinate', cursive;
+    font-size:2.5vw;
     text-decoration:none;
 } 
 
