--- a/css/mycss.css
+++ b/css/mycss.css
@@ -477,7 +477,7 @@ nav .flex-container {
 
 .hand {
     background-size:100% 100%;
-    background-image: url("../img/hand.png");
+    background-image: url("../img/hand2.png");
     transition: transform 1.5s;
 }
 
